tests/should_fail/bug/1610-crash.stderr
warning: unused import: `creusot_std::prelude::*`
 --> 1610-crash.rs:4:5
  |
4 | use creusot_std::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: struct `P` is never constructed
 --> 1610-crash.rs:6:8
  |
6 | struct P();
  |        ^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `B: creusot_std::prelude::FromIteratorSpec<()>` is not satisfied
  --> 1610-crash.rs:15:9
   |
15 |         std::iter::empty().collect()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `creusot_std::prelude::FromIteratorSpec<()>` is not implemented for `B`

error: could not resolve trait instance for creusot_std::prelude::FromIteratorSpec::from_iter_post[B, <std::iter::Empty<()> as std::iter::Iterator>::Item]
   --> ./creusot-std/src/std/iter.rs:175:89
    |
175 |                     resolve(^done) && done.completed() && self.produces(prod, *done) && B::from_iter_post(prod, result))]
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.
